--- a/package.json
+++ b/package.json
@@ -1,21 +1,128 @@
 {
-  "name": "zksync.matter",
-  "version": "1.0.0",
-  "description": "zksync demo",
-  "main": "index.js",
+  "name": "my-app",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@types/jest": "^24.0.18",
+    "@types/node": "^12.7.4",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.1",
+    "@types/react-router-dom": "^5.1.0",
+    "@typescript-eslint/eslint-plugin": "^2.1.0",
+    "@typescript-eslint/parser": "^2.11.0",
+    "antd": "^3.23.2",
+    "commitlint": "^8.1.0",
+    "eslint-config-prettier": "^6.2.0",
+    "ethers": "^4.0.43",
+    "husky": "^3.0.5",
+    "i": "^0.3.6",
+    "mobx": "^5.15.2",
+    "mobx-react-lite": "^1.5.2",
+    "node-sass": "^4.12.0",
+    "prettier": "^1.18.2",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-router-dom": "^5.1.0",
+    "react-scripts": "3.1.1",
+    "stylelint": "^13.0.0",
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-config-recommended": "^3.0.0",
+    "stylelint-declaration-use-variable": "^1.7.2",
+    "stylelint-high-performance-animation": "^1.4.0",
+    "stylelint-order": "^4.0.0",
+    "stylelint-scss": "^3.13.0",
+    "typescript": "^3.6.2",
+    "web3": "^1.2.5-rc.0",
+    "zksync": "^0.3.9"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "format": "prettier --write \"src/**/*.{ts,tsx}\"",
+    "lint": "eslint 'src/**/*.{ts,tsx}'",
+    "lint-css": "stylelint \"src/**/*.{scss,css}\" --fix"
   },
-  "repository": {
-    "type": "git",
-    "url": "ssh://git@git.nodeart.app/naw/zksync.matter.git"
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint && npm run format && npm run lint-css && git add",
+      "commit-msg": "commitlint --format -E HUSKY_GIT_PARAMS"
+    }
   },
-  "keywords": [
-    "zksync",
-    "react",
-    "web3",
-    "typescript"
-  ],
-  "author": "matter labs",
-  "license": "MIT"
+  "stylelint": {
+    "extends": [
+      "stylelint-config-recommended",
+      "stylelint-config-rational-order"
+    ],
+    "plugins": [
+      "stylelint-order",
+      "stylelint-scss",
+      "stylelint-config-rational-order/plugin",
+      "stylelint-high-performance-animation",
+      "stylelint-declaration-use-variable"
+    ],
+    "rules": {
+      "no-empty-source": [
+        true,
+        {
+          "severity": "warning"
+        }
+      ],
+      "plugin/no-low-performance-animation-properties": [
+        true,
+        {
+          "severity": "warning"
+        }
+      ],
+      "sh-waqar/declaration-use-variable": [
+        [
+          "/color/",
+          "font-size",
+          "font-family",
+          "font-weight"
+        ]
+      ],
+      "order/properties-order": [],
+      "plugin/rational-order": [
+        true,
+        {
+          "border-in-box-model": false,
+          "empty-line-between-groups": false
+        }
+      ],
+      "selector-type-no-unknown": [
+        true,
+        {
+          "ignore": [
+            "custom-elements"
+          ]
+        }
+      ],
+      "no-descending-specificity": true,
+      "at-rule-no-unknown": null,
+      "scss/at-rule-no-unknown": true
+    }
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "eslint": "^6.3.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.14.3",
+    "npm": "^6.13.6"
+  }
 }
