--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.8.3",
+    "@portis/web3": "^2.0.0-beta.54",
+    "@types/dotenv": "^8.2.0",
     "@types/jest": "^24.9.0",
     "@types/node": "^12.12.25",
     "@types/react": "^16.9.19",
@@ -11,10 +13,13 @@
     "@types/react-router-dom": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^2.17.0",
     "@typescript-eslint/parser": "^2.17.0",
+    "@walletconnect/web3-provider": "^1.0.0-beta.46",
     "antd": "^3.26.7",
     "commitlint": "^8.3.5",
+    "dotenv": "^8.2.0",
     "eslint-config-prettier": "^6.9.0",
     "ethers": "^4.0.43",
+    "fortmatic": "^1.1.3",
     "husky": "^3.1.0",
     "i": "^0.3.6",
     "mobx": "^5.15.2",
@@ -33,7 +38,7 @@
     "stylelint-order": "^4.0.0",
     "stylelint-scss": "^3.13.0",
     "typescript": "^3.7.5",
-    "web3": "^1.2.5-rc.0",
+    "web3": "^1.2.5",
     "zksync": "^0.3.10"
   },
   "scripts": {
