--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^8.2.0",
     "eslint-config-prettier": "^6.9.0",
     "ethers": "^4.0.43",
+    "firebase-tools": "^7.3.0",
     "fortmatic": "^1.1.3",
     "husky": "^3.1.0",
     "i": "^0.3.6",
@@ -48,7 +49,8 @@
     "eject": "react-scripts eject",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
-    "lint-css": "stylelint \"src/**/*.{scss,css}\" --fix"
+    "lint-css": "stylelint \"src/**/*.{scss,css}\" --fix",
+    "deploy_hosting": "firebase deploy --only hosting"
   },
   "husky": {
     "hooks": {
@@ -129,6 +131,6 @@
     "eslint": "^6.8.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.0",
-    "npm": "^6.13.6"
+    "npm": "^6.13.7"
   }
 }
