--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
-    "zksync": "^0.3.10"
+    "zksync": "^0.3.10",
+    "npm-audit-html": "1.4.0",
+    "license-checker": "25.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -25,7 +27,9 @@
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "lint": "eslint \"src/**/*.{ts,tsx}\"",
     "lint-css": "stylelint \"src/**/*.{scss,css}\" --fix",
-    "deploy_hosting": "firebase deploy --only hosting"
+    "deploy_hosting": "firebase deploy --only hosting",
+    "audit_dependencies": "npm audit --package-lock-only --audit-level critical --json | npm-audit-html --output audit.html",
+    "check_licenses": "license-checker --json > licenses.json"
   },
   "husky": {
     "hooks": {
