--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
     "antd": "^3.26.7",
     "ethers": "^4.0.43",
     "fortmatic": "^1.1.3",
+    "license-checker": "25.0.1",
     "mobx": "^5.15.2",
     "mobx-react-lite": "^1.5.2",
     "node-sass": "^4.13.1",
+    "npm-audit-html": "1.4.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
-    "zksync": "^0.3.10",
-    "npm-audit-html": "1.4.0",
-    "license-checker": "25.0.1"
+    "web3": "^1.2.6",
+    "zksync": "^0.3.10"
   },
   "scripts": {
     "start": "react-scripts start",
