--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
     "antd": "^3.26.7",
     "ethers": "^4.0.43",
     "fortmatic": "^1.1.3",
-    "license-checker": "25.0.1",
     "mobx": "^5.15.2",
     "mobx-react-lite": "^1.5.2",
     "node-sass": "^4.13.1",
-    "npm-audit-html": "1.4.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
@@ -121,6 +119,7 @@
     "eslint-plugin-react": "^7.18.0",
     "firebase-tools": "^7.3.0",
     "husky": "^3.1.0",
+    "license-checker": "25.0.1",
     "prettier": "^1.19.1",
     "stylelint": "^13.0.0",
     "stylelint-config-rational-order": "^0.1.2",
@@ -130,6 +129,7 @@
     "stylelint-order": "^4.0.0",
     "stylelint-scss": "^3.13.0",
     "typescript": "^3.7.5",
-    "npm": "^6.13.7"
+    "npm": "^6.13.7",
+    "npm-audit-html": "1.4.0"
   }
 }
