--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@portis/web3": "^2.0.0-beta.54",
     "@walletconnect/web3-provider": "^1.0.0-beta.46",
     "antd": "^3.26.7",
+    "ethereum-blockies-base64": "^1.0.2",
     "ethers": "^4.0.45",
     "fortmatic": "^1.1.3",
     "mobx": "^5.15.2",
