--- a/package.json
+++ b/package.json
@@ -11,30 +11,31 @@
     "fortmatic": "^1.1.3",
     "mobx": "^5.15.2",
     "mobx-react-lite": "^1.5.2",
-    "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.3.0",
     "zksync": "^0.4.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "format": "prettier --write \"src/**/*.{ts,tsx}\"",
-    "lint": "eslint \"src/**/*.{ts,tsx}\"",
-    "lint-css": "stylelint \"src/**/*.{scss,css}\" --fix",
+    "start": "NODE_ENV=development webpack-dev-server",
+    "build": "NODE_ENV=production webpack",
+    "test": "echo \"Not implemented.\"",
+    "format": "prettier --write",
+    "lint-ts": "eslint --fix",
+    "lint-css": "stylelint --fix",
     "deploy_hosting": "firebase deploy --only hosting",
     "audit_dependencies": "npm audit --package-lock-only --audit-level critical --json | npm-audit-html --output audit.html",
     "check_licenses": "license-checker --json > licenses.json"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint && npm run format && npm run lint-css && git add",
+      "pre-commit": "lint-staged",
       "commit-msg": "commitlint --format -E HUSKY_GIT_PARAMS"
     }
+  },
+  "lint-staged": {
+    "*.{css,scss}": "npm run lint-css",
+    "*.{ts,tsx}": ["npm run lint-ts", "npm run format"]
   },
   "stylelint": {
     "extends": [
@@ -114,14 +115,24 @@
     "@typescript-eslint/eslint-plugin": "^2.17.0",
     "@typescript-eslint/parser": "^2.17.0",
     "commitlint": "^8.3.5",
+    "copy-webpack-plugin": "^5.1.1",
+    "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.0",
+    "file-loader": "^6.0.0",
     "firebase-tools": "^7.3.0",
+    "html-webpack-plugin": "^4.0.1",
     "husky": "^3.1.0",
     "license-checker": "25.0.1",
+    "lint-staged": "^10.0.9",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.13.1",
+    "npm-audit-html": "1.4.0",
     "prettier": "^1.19.1",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3",
     "stylelint": "^13.0.0",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-recommended": "^3.0.0",
@@ -129,8 +140,10 @@
     "stylelint-high-performance-animation": "^1.4.0",
     "stylelint-order": "^4.0.0",
     "stylelint-scss": "^3.13.0",
-    "typescript": "^3.7.5",
-    "npm": "^6.13.7",
-    "npm-audit-html": "1.4.0"
+    "ts-loader": "^6.2.2",
+    "typescript": "^3.8.3",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   }
 }
