fix: revert stashed fixes

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -22,6 +22,7 @@ rules:
   '@typescript-eslint/no-this-alias': off
   '@typescript-eslint/no-empty-interface': off
   '@typescript-eslint/no-non-null-assertion': off
+  'react/jsx-wrap-multilines': error
   quotes:
     - warn
     - single
