--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "@types/react-router-dom": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^2.17.0",
     "@typescript-eslint/parser": "^2.17.0",
+    "autoprefixer": "^9.7.5",
     "commitlint": "^8.3.5",
     "copy-webpack-plugin": "^5.1.1",
     "cross-env": "^7.0.2",
@@ -136,6 +137,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "npm-audit-html": "1.4.0",
+    "postcss-loader": "^3.0.0",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
