--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@portis/web3": "^2.0.0-beta.54",
     "@walletconnect/web3-provider": "^1.0.0-beta.46",
     "antd": "^3.26.7",
+    "classnames": "^2.2.6",
     "ethereum-blockies-base64": "^1.0.2",
     "ethers": "^4.0.45",
     "fortmatic": "^1.1.3",
@@ -114,7 +115,7 @@
   "devDependencies": {
     "@types/jest": "^24.9.0",
     "@types/node": "^12.12.25",
-    "@types/react": "^16.9.19",
+    "@types/react": "^16.9.26",
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^2.17.0",
