--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
+    "react-transition-group": "^4.3.0",
     "zksync": "^0.4.2"
   },
   "scripts": {
