--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
     "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.0",
+    "eslint-plugin-react-hooks": "^3.0.0",
     "file-loader": "^6.0.0",
     "firebase-tools": "^7.3.0",
     "html-webpack-plugin": "^4.0.1",
