chore: using `url-loader` for inlining small images

--- a/package.json
+++ b/package.json
@@ -153,6 +153,7 @@
     "stylelint-scss": "^3.13.0",
     "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
+    "url-loader": "^4.1.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
