--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.1",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "@lottiefiles/lottie-player": "^0.5.1",
     "@portis/web3": "^2.0.0-beta.54",
     "@walletconnect/web3-provider": "^1.0.0-beta.47",
