--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@portis/web3": "^2.0.0-beta.54",
     "@types/yargs": "^15.0.4",
     "@walletconnect/web3-provider": "^1.0.0-beta.47",
+    "@web3-react/core": "^6.0.9",
+    "@web3-react/injected-connector": "^6.0.7",
     "antd": "^3.26.7",
     "classnames": "^2.2.6",
     "ethereum-blockies-base64": "^1.0.2",
@@ -22,6 +24,7 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-transition-group": "^4.3.0",
+    "web3": "^1.2.7",
     "zksync": "^0.5.4"
   },
   "scripts": {
