Swap the content of the environment settings (#15)

--- a/environments/.env.rinkeby
+++ b/environments/.env.rinkeby
@@ -1,10 +1,10 @@
 REACT_APP_WALLET_CONNECT=72b13ae588b44eb9bc04c571bf22c984
 REACT_APP_FORTMATIC=pk_test_6CCD7EB1D7A9D0DB
 REACT_APP_PORTIS=68099bdc-3de9-4adc-ace0-e4664c1e77b4
-REACT_APP_ZKSYNC_API_LINK=stage-api.zksync.dev
-REACT_APP_ZKSYNC_BLOCK_EXPLORER=stage.zksync.dev/explorer
+REACT_APP_ZKSYNC_API_LINK=rinkeby-api.zksync.io
+REACT_APP_ZKSYNC_BLOCK_EXPLORER=rinkeby.zkscan.io/explorer
 REACT_APP_ETH_BLOCK_EXPLORER=rinkeby.etherscan.io
 REACT_APP_CURRENT_NETWORK=rinkeby
-REACT_APP_WS_API=wss://stage-api.zksync.dev/jsrpc-ws
+REACT_APP_WS_API=wss://rinkeby-api.zksync.io/jsrpc-ws
 REACT_APP_CURRENT_NETWORK_ID=4
 REACT_APP_GIT_REVISION=1
