--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "@portis/web3": "^2.0.0-beta.57",
     "@types/yargs": "^15.0.4",
     "@walletconnect/web3-provider": "^1.0.11",
-    "@web3-react/core": "^6.0.9",
-    "@web3-react/injected-connector": "^6.0.7",
     "classnames": "^2.2.6",
     "ethereum-blockies-base64": "^1.0.2",
     "ethers": "^4.0.47",
@@ -30,6 +28,7 @@
     "react-router-dom": "^5.1.2",
     "react-transition-group": "^4.3.0",
     "react-typing-effect": "^2.0.3",
+    "walletlink": "^2.0.2",
     "web3": "^1.2.7",
     "zksync": "^0.5.14"
   },
