--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^16.12.0",
     "react-google-recaptcha": "^2.1.0",
     "react-router-dom": "^5.1.2",
+    "react-tooltip": "^4.2.10",
     "react-transition-group": "^4.3.0",
     "react-typing-effect": "^2.0.3",
     "walletlink": "^2.0.2",
@@ -135,6 +136,7 @@
     "@typescript-eslint/parser": "^2.17.0",
     "autoprefixer": "^9.7.5",
     "commitlint": "^8.3.5",
+    "compression-webpack-plugin": "^4.0.1",
     "copy-webpack-plugin": "^5.1.1",
     "cross-env": "^7.0.2",
     "css-loader": "^3.4.2",
@@ -169,7 +171,6 @@
     "url-loader": "^4.1.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0",
-    "compression-webpack-plugin": "^4.0.0"
+    "webpack-dev-server": "^3.11.0"
   }
 }
