--- a/.eslintignore
+++ b/.eslintignore
@@ -1,1 +1,6 @@
-**/*.js
+# don't ever lint node_modules
+node_modules
+# don't ever lint public
+public
+# don't lint build output (make sure it's set to your correct build folder name)
+lib
