--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.1",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.0.0-0",
+    "@bugsnag/core": "^7.0.0",
     "@bugsnag/js": "^7.1.1",
     "@bugsnag/plugin-react": "^7.1.1",
+    "@ethersproject/logger": "^5.0.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
@@ -132,8 +135,8 @@
     "@types/react": "^16.9.26",
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
-    "@typescript-eslint/eslint-plugin": "^2.17.0",
-    "@typescript-eslint/parser": "^2.17.0",
+    "@typescript-eslint/eslint-plugin": "^4.6.1",
+    "@typescript-eslint/parser": "^4.6.1",
     "autoprefixer": "^9.7.5",
     "commitlint": "^8.3.5",
     "compression-webpack-plugin": "^4.0.1",
@@ -141,11 +144,16 @@
     "cross-env": "^7.0.2",
     "css-loader": "^3.4.2",
     "dotenv": "^8.2.0",
-    "eslint": "^6.8.0",
+    "eslint": "7",
     "eslint-config-prettier": "^6.9.0",
+    "eslint-config-standard-with-typescript": "^19.0.1",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.0",
-    "eslint-plugin-react-hooks": "^3.0.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-import": "2",
+    "eslint-plugin-node": "11",
+    "eslint-plugin-promise": "4",
+    "eslint-plugin-standard": "4",
     "file-loader": "^6.0.0",
     "firebase-tools": "^7.3.0",
     "html-webpack-plugin": "^4.0.1",
@@ -167,7 +175,7 @@
     "stylelint-order": "^4.0.0",
     "stylelint-scss": "^3.13.0",
     "ts-loader": "^6.2.2",
-    "typescript": "^3.8.3",
+    "typescript": "^4.0.5",
     "url-loader": "^4.1.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
