--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@walletconnect/web3-provider": "^1.0.11",
     "classnames": "^2.2.6",
     "ethereum-blockies-base64": "^1.0.2",
-    "ethers": "^5.0.12",
+    "ethers": "5.0.23",
     "fortmatic": "^1.1.3",
     "imagemin-webp-webpack-plugin": "^3.3.2",
     "imagemin-webpack-plugin": "^2.4.2",
@@ -34,7 +34,7 @@
     "react-typing-effect": "^2.0.3",
     "walletlink": "^2.0.2",
     "web3": "^1.2.7",
-    "zksync": "^0.7.4"
+    "zksync": "^0.7.5"
   },
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server",
@@ -147,12 +147,12 @@
     "eslint": "7",
     "eslint-config-prettier": "^6.9.0",
     "eslint-config-standard-with-typescript": "^19.0.1",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.18.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-import": "2",
     "eslint-plugin-node": "11",
+    "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-promise": "4",
+    "eslint-plugin-react": "^7.18.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-standard": "4",
     "file-loader": "^6.0.0",
     "firebase-tools": "^7.3.0",
@@ -175,7 +175,7 @@
     "stylelint-order": "^4.0.0",
     "stylelint-scss": "^3.13.0",
     "ts-loader": "^6.2.2",
-    "typescript": "^4.0.5",
+    "typescript": "^4.0.1",
     "url-loader": "^4.1.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
