--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@fortawesome/react-fontawesome": "^0.1.9",
     "@lottiefiles/lottie-player": "^0.5.1",
     "@portis/web3": "^2.0.0-beta.59",
-    "@types/yargs": "^15.0.4",
+    "@types/yargs": "15.*",
     "@walletconnect/web3-provider": "^1.0.11",
     "classnames": "^2.2.6",
     "ethereum-blockies-base64": "^1.0.2",
-    "ethers": "5.0.23",
+    "ethers": "^5.0.12",
     "fortmatic": "^1.1.3",
     "imagemin-webp-webpack-plugin": "^3.3.2",
     "imagemin-webpack-plugin": "^2.4.2",
@@ -34,7 +34,7 @@
     "react-typing-effect": "^2.0.3",
     "walletlink": "^2.0.2",
     "web3": "^1.2.7",
-    "zksync": "^0.7.5"
+    "zksync": "^0.7.4"
   },
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server",
@@ -136,15 +136,15 @@
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/parser": "^4.6.1",
+    "@typescript-eslint/parser": "*",
     "autoprefixer": "^9.7.5",
-    "commitlint": "^8.3.5",
+    "commitlint": "9.1.*",
     "compression-webpack-plugin": "^4.0.1",
     "copy-webpack-plugin": "^5.1.1",
     "cross-env": "^7.0.2",
     "css-loader": "^3.4.2",
     "dotenv": "^8.2.0",
-    "eslint": "7",
+    "eslint": "7.*",
     "eslint-config-prettier": "^6.9.0",
     "eslint-config-standard-with-typescript": "^19.0.1",
     "eslint-plugin-import": "2",
@@ -175,7 +175,7 @@
     "stylelint-order": "^4.0.0",
     "stylelint-scss": "^3.13.0",
     "ts-loader": "^6.2.2",
-    "typescript": "^4.0.1",
+    "typescript": "^3.8.3",
     "url-loader": "^4.1.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
