--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "sourceMap": true,
     "strict": true,
     "experimentalDecorators": true,
-    "target": "ES2019",
+    "target": "ES6",
     "outDir": "./lib",
     "lib": ["dom", "dom.iterable", "esnext"],
     "esModuleInterop": true,
@@ -33,5 +33,5 @@
     "incremental": true
   },
   "include": ["./src/**/**/*", "**/*.d.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "public", "lib"]
 }
