update: Merged everything, going to test it on stagings

--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "my-app",
-  "version": "0.1.1",
+  "name": "zksync-wallet",
+  "version": "1.5.5",
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.0.0-0",
-    "@bugsnag/core": "^7.0.0",
+    "@babel/core": "7.12.10",
+    "@bugsnag/core": "7.5.4",
     "@bugsnag/js": "^7.1.1",
     "@bugsnag/plugin-react": "^7.1.1",
     "@ethersproject/logger": "^5.0.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
-    "@lottiefiles/lottie-player": "^0.5.1",
+    "@lottiefiles/react-lottie-player": "^2.2.2",
     "@portis/web3": "^2.0.0-beta.59",
     "@types/yargs": "15.*",
     "@walletconnect/web3-provider": "^1.0.11",
@@ -28,6 +28,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-google-recaptcha": "^2.1.0",
+    "react-lottie": "^1.2.3",
     "react-router-dom": "^5.1.2",
     "react-tooltip": "^4.2.10",
     "react-transition-group": "^4.3.0",
