--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@fortawesome/react-fontawesome": "^0.1.9",
     "@lottiefiles/react-lottie-player": "^2.2.2",
     "@portis/web3": "^2.0.0-beta.59",
-    "@types/yargs": "15.*",
+    "@types/yargs": "^15.0.4",
     "@walletconnect/web3-provider": "^1.0.11",
     "classnames": "^2.2.6",
     "ethereum-blockies-base64": "^1.0.2",
@@ -28,7 +28,6 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-google-recaptcha": "^2.1.0",
-    "react-lottie": "^1.2.3",
     "react-router-dom": "^5.1.2",
     "react-tooltip": "^4.2.10",
     "react-transition-group": "^4.3.0",
@@ -137,9 +136,9 @@
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/parser": "*",
+    "@typescript-eslint/parser": "^4.6.1",
     "autoprefixer": "^9.7.5",
-    "commitlint": "9.1.*",
+    "commitlint": "^8.3.5",
     "compression-webpack-plugin": "^4.0.1",
     "copy-webpack-plugin": "^5.1.1",
     "cross-env": "^7.0.2",
@@ -176,7 +175,7 @@
     "stylelint-order": "^4.0.0",
     "stylelint-scss": "^3.13.0",
     "ts-loader": "^6.2.2",
-    "typescript": "^3.8.3",
+    "typescript": "^4.0.5",
     "url-loader": "^4.1.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
