--- a/.eslintignore
+++ b/.eslintignore
@@ -1,6 +1,6 @@
 # don't ever lint node_modules
 node_modules
 # don't ever lint public
-§§src
+build
 # don't lint build output (make sure it's set to your correct build folder name)
 lib
