--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,5 +33,5 @@
     "incremental": true
   },
   "include": ["./src/**/**/*", "**/*.d.ts"],
-  "exclude": ["node_modules", "public", "lib"]
+  "exclude": ["node_modules"]
 }
