--- a/package.json
+++ b/package.json
@@ -21,8 +21,6 @@
     "@nuxtjs/toast": "latest",
     "bnc-onboard": "latest",
     "dotenv": "latest",
-    "ethereum-blockies-base64": "^1.0.2",
-    "ethers": "^5.0.22",
     "joi-browser": "latest",
     "lottie-web": "^5.7.5",
     "moment": "^2.29.1",
@@ -31,11 +29,18 @@
     "vue": "^2.6.12",
     "vue-qrcode": "^0.3.5",
     "vue-scrollto": "^2.17.1",
-    "web3": "^1.3.0",
-    "zksync": "^0.8.3"
+    "walletlink": "^2.0.2",
+    "web3": "^1.2.7",
+    "zksync": "^0.7.4",
+    "@portis/web3": "^2.0.0-beta.59",
+    "@walletconnect/web3-provider": "^1.0.11",
+    "ethereum-blockies-base64": "^1.0.2",
+    "ethers": "^5.0.12",
+    "fortmatic": "^1.1.3"
   },
   "description": "zkWallet was created to unleash the power of zkSync L2 operations and give anyone an access to L2 zkSync features on mainnet",
   "devDependencies": {
+    "commitlint": "^8.3.5",
     "eslint-plugin-nuxt": "^2.0.0",
     "lodash": "4.17.20",
     "@inkline/nuxt": "^2.3.5",
