--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
     "@nuxtjs/dotenv": "latest",
     "@nuxtjs/pwa": "latest",
     "@nuxtjs/toast": "latest",
+    "@portis/web3": "^2.0.0-beta.59",
+    "@walletconnect/web3-provider": "^1.0.11",
     "bnc-onboard": "latest",
     "dotenv": "latest",
+    "ethereum-blockies-base64": "^1.0.2",
+    "ethers": "^5.0.12",
+    "fortmatic": "^1.1.3",
     "joi-browser": "latest",
     "lottie-web": "^5.7.5",
     "moment": "^2.29.1",
@@ -30,31 +35,27 @@
     "vue-qrcode": "^0.3.5",
     "vue-scrollto": "^2.17.1",
     "walletlink": "^2.0.2",
-    "web3": "^1.2.7",
-    "zksync": "^0.7.4",
-    "@portis/web3": "^2.0.0-beta.59",
-    "@walletconnect/web3-provider": "^1.0.11",
-    "ethereum-blockies-base64": "^1.0.2",
-    "ethers": "^5.0.12",
-    "fortmatic": "^1.1.3"
+    "web3": "^1.3.1",
+    "zksync": "^0.7.4"
   },
   "description": "zkWallet was created to unleash the power of zkSync L2 operations and give anyone an access to L2 zkSync features on mainnet",
   "devDependencies": {
-    "commitlint": "^8.3.5",
-    "eslint-plugin-nuxt": "^2.0.0",
-    "lodash": "4.17.20",
     "@inkline/nuxt": "^2.3.5",
     "@nuxt/telemetry": "^1.3.0",
     "@nuxt/types": "^2.14.11",
     "@nuxtjs/style-resources": "^1.0.0",
-    "eslint": "^7.15.0",
-    "eslint-config-prettier": "^7.0.0",
+    "commitlint": "^8.3.5",
+    "eslint": "^7.16.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier-vue": "^2.1.1",
     "eslint-plugin-vue": "^7.0.0",
     "fs-extra": "latest",
+    "lodash": "4.17.20",
     "node-sass": "latest",
     "prettier": "^2.2.1",
-    "sass-loader": "latest"
+    "sass-loader": "latest",
+    "vue-cli-plugin-storybook": "~2.0.0"
   },
   "eslintConfig": {
     "extends": "plugin:vue/recommended"
