feature: next big update on wallet
— Minting tokens
— Wallet unlocking procedure + some fixes
— Feedback fixes, part1

--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,7 @@ APP_ZKSYNC_BLOCK_EXPLORER=rinkeby.zkscan.io/explorer
 APP_ETH_BLOCK_EXPLORER=rinkeby.etherscan.io
 APP_CURRENT_NETWORK=rinkeby
 APP_WS_API=wss://rinkeby-api.zksync.io/jsrpc-ws
+APP_WS_API_ETHERSCAN_TOKEN=FTKI6X11ZGTQ9J1KZ6WIRQ2ZW8EYZ8Y7FC
 APP_CURRENT_NETWORK_ID=4
+RECAPTCHA_SITE_KEY=6LdEBqUZAAAAAMAr2XDTxJHuXOxpQ7rfkn2BBfUo
+RESTRICTED_TOKENS=PHNX,LAMB
