--- a/package.json
+++ b/package.json
@@ -33,13 +33,15 @@
     "nuxt-i18n": "^6.8.1",
     "vue": "^2.6.12",
     "vue-qrcode": "^0.3.5",
+    "vue-recaptcha": "^1.3.0",
     "vue-scrollto": "^2.17.1",
     "walletlink": "^2.0.2",
-    "web3": "^1.3.1",
+    "web3": "^1.2.7",
     "zksync": "^0.7.4"
   },
   "description": "zkWallet was created to unleash the power of zkSync L2 operations and give anyone an access to L2 zkSync features on mainnet",
   "devDependencies": {
+    "@nuxtjs/dotenv": "1.4.1",
     "@inkline/nuxt": "^2.3.5",
     "@nuxt/telemetry": "^1.3.0",
     "@nuxt/types": "^2.14.11",
