--- a/.eslintignore
+++ b/.eslintignore
@@ -1,8 +1,11 @@
 # don't ever lint node_modules
 node_modules
 # don't ever lint public
-build
 dist
 .nuxt
 # don't lint build output (make sure it's set to your correct build folder name)
-lib
+/functions/.nuxt/
+/functions/node_modules
+/.cache
+/.github
+/.idea
