--- a/.firebaserc
+++ b/.firebaserc
@@ -1,21 +1,5 @@
 {
   "projects": {
-    "default": "zksync-demo",
-    "beta": "zksync-demo"
-  },
-  "targets": {
-    "zksync-demo": {
-      "hosting": {
-        "mainnet-beta": [
-          "zksync-mainnet-beta"
-        ],
-        "rinkeby-beta": [
-          "zksync-rinkeby-beta"
-        ],
-        "ropsten-beta": [
-          "zksync-ropsten-beta"
-        ]
-      }
-    }
+    "default": "zksync-vue"
   }
 }
