--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-  
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
@@ -38,3 +38,4 @@ yarn-error.log*
 .reports/
 /functions/.nuxt/
 /src/static/sw.js
+public/*
