--- a/environments/.env.rinkeby
+++ b/environments/.env.rinkeby
@@ -1,10 +1,17 @@
-REACT_APP_WALLET_CONNECT=72b13ae588b44eb9bc04c571bf22c984
-REACT_APP_FORTMATIC=pk_test_6CCD7EB1D7A9D0DB
-REACT_APP_PORTIS=68099bdc-3de9-4adc-ace0-e4664c1e77b4
-REACT_APP_ZKSYNC_API_LINK=rinkeby-api.zksync.io
-REACT_APP_ZKSYNC_BLOCK_EXPLORER=rinkeby.zkscan.io/explorer
-REACT_APP_ETH_BLOCK_EXPLORER=rinkeby.etherscan.io
-REACT_APP_CURRENT_NETWORK=rinkeby
-REACT_APP_WS_API=wss://rinkeby-api.zksync.io/jsrpc-ws
-REACT_APP_CURRENT_NETWORK_ID=4
-REACT_APP_GIT_REVISION=1
+APP_NAME="zkWallet dAPP by zkSync | Rinkeby"
+APP_ONBOARDING_APP_ID=c4b83f7e-9bea-40d8-ad61-539f800863ee
+APP_WALLET_CONNECT=72b13ae588b44eb9bc04c571bf22c984
+APP_FORTMATIC=pk_test_6CCD7EB1D7A9D0DB
+APP_PORTIS=68099bdc-3de9-4adc-ace0-e4664c1e77b4
+
+APP_ZKSYNC_API_LINK=rinkeby-api.zksync.io
+APP_ZKSYNC_BLOCK_EXPLORER=rinkeby.zkscan.io/explorer
+APP_ETH_BLOCK_EXPLORER=rinkeby.etherscan.io
+
+APP_ALCHEMY_API_KEY=72b13ae588b44eb9bc04c571bf22c984
+APP_WS_API_ETHERSCAN_TOKEN=FTKI6X11ZGTQ9J1KZ6WIRQ2ZW8EYZ8Y7FC
+RECAPTCHA_SITE_KEY=6LeLrREaAAAAAMu8pgd66XVyy2tzwa8lWw7wRQan
+APP_CURRENT_NETWORK=rinkeby
+APP_CURRENT_NETWORK_ID=4
+APP_WS_API=wss://rinkeby.api.zksync.io/jsrpc-ws
+APP_GIT_REVISION=
