--- a/src/.env.example
+++ b/src/.env.example
@@ -1,4 +1,4 @@
-APP_NAME="zkWallet v.2.0-beta | Rinkeby"
+APP_NAME="zkWallet dAPP by zkSync | Rinkeby"
 APP_ONBOARDING_APP_ID=c4b83f7e-9bea-40d8-ad61-539f800863ee
 APP_WALLET_CONNECT=72b13ae588b44eb9bc04c571bf22c984
 APP_FORTMATIC=pk_test_6CCD7EB1D7A9D0DB
@@ -14,7 +14,4 @@ RECAPTCHA_SITE_KEY=6LeLrREaAAAAAMu8pgd66XVyy2tzwa8lWw7wRQan
 APP_CURRENT_NETWORK=rinkeby
 APP_CURRENT_NETWORK_ID=4
 APP_WS_API=wss://rinkeby-api.zksync.io/jsrpc-ws
-APP_GIT_REVISION=1
-APP_WALLET_VERSION=2.0.0-beta
-APP_BUGSNAG_API_KEY=51c871e13f69b1ee2c2afd5a282d576f
-APP_RELEASE_STAGE=develop
+APP_GIT_REVISION=
