--- a/package.json
+++ b/package.json
@@ -51,13 +51,12 @@
     "sass-loader": "latest"
   },
   "scripts": {
-    "build:firebase:mainnet": "yarn preci && yarn init_env:mainnet && yarn ci && yarn generate",
-    "build:firebase:rinkeby": "yarn preci && yarn init_env:rinkeby && yarn ci && yarn generate",
+    "build:firebase:mainnet": "yarn init_env:mainnet && yarn ci && yarn generate",
+    "build:firebase:rinkeby": "yarn init_env:rinkeby && yarn ci && yarn generate",
     "init_env:mainnet": "cp \"environments/.env.mainnet\" \"src/.env\" && git rev-parse --short HEAD>>\"src/.env\"",
     "init_env:rinkeby": "cp \"environments/.env.rinkeby\" \"src/.env\" && git rev-parse --short HEAD>>\"src/.env\"",
     "start:firebase": "firebase serve --only hosting",
     "deploy": "firebase deploy --only hosting",
-    "preci": "rm -fr node_modules && rm -rf \"public/**\"",
     "ci": "yarn install --frozen-lockfile",
     "dev": "nuxt",
     "start": "nuxt start",
@@ -81,8 +80,8 @@
   "lint-staged": {
     "*.{css,scss}": "npm run lint-css",
     "*.{ts,tsx}": [
-      "npm run lint-ts",
-      "npm run format"
+      "yarn run lint-ts",
+      "yarn run format"
     ]
   },
   "stylelint": {
