--- a/.github/workflows/firebase-rinkeby-merge.yml
+++ b/.github/workflows/firebase-rinkeby-merge.yml
@@ -19,6 +19,6 @@ jobs:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}'
           channelId: rinkeby
-          projectId: zksync-vue
+          projectId: zksync-vue-stage
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
