update: improvements & bugfixes
— simplified .env files
— .editorconfig update
— title fix
— removed direct dependency of walletconnect in favour of onboard.js
— code linted once again
— consistent loader
— version fixed
— version BG changed
— refactoring
— fix for the Deposit

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,11 +1,10 @@
 # don't ever lint node_modules
-node_modules
+/node_modules/*
 # don't ever lint public
-dist
-.nuxt
-# don't lint build output (make sure it's set to your correct build folder name)
-/functions/.nuxt/
-/functions/node_modules
-/.cache
-/.github
-/.idea
+/.nuxt/*
+/src/assets/fonts/*
+/src/assets/imgs/*
+/.github/*
+/.idea/*
+/environments/*
+/public/*
