--- a/src/.env.example
+++ b/src/.env.example
@@ -1,4 +1,4 @@
-APP_NAME="zkWallet dAPP by zkSync | Rinkeby"
+APP_NAME="zkWallet v.2.0-beta | Rinkeby"
 APP_ONBOARDING_APP_ID=c4b83f7e-9bea-40d8-ad61-539f800863ee
 APP_WALLET_CONNECT=72b13ae588b44eb9bc04c571bf22c984
 APP_FORTMATIC=pk_test_6CCD7EB1D7A9D0DB
