fixes ID-ZKF-158
— icon completely removed

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,10 @@
 {
   "hosting": {
-    "firebase": "zksync-vue",
-    "public": "public"
+    "public": "public",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ]
   }
 }
