--- a/package.json
+++ b/package.json
@@ -50,13 +50,14 @@
     "sass-loader": "latest"
   },
   "scripts": {
-    "build:firebase:mainnet": "yarn init_env:mainnet && yarn ci && yarn generate",
-    "build:firebase:rinkeby": "yarn init_env:rinkeby && yarn ci && yarn generate",
-    "init_env:mainnet": "cp \"environments/.env.mainnet\" \"src/.env\" && cp \"environments/.env.mainnet\" \".env\"",
-    "init_env:rinkeby": "cp \"environments/.env.rinkeby\" \"src/.env\" && cp \"environments/.env.rinkeby\" \".env\"",
+    "build:firebase:mainnet": "yarn preci && yarn ci && yarn init_env:mainnet && yarn generate",
+    "build:firebase:rinkeby": "yarn preci && yarn ci && yarn init_env:rinkeby && yarn generate",
+    "init_env:mainnet": "cp \"environments/.env.mainnet\" \".env\" && GIT_REF=\"APP_GIT_REVISION=$(git rev-parse --short HEAD)\" && echo \"$GIT_REF\" >> \".env\" && cp \"environments/.env.mainnet\" \"src/.env\" && GIT_REF=\"APP_GIT_REVISION=$(git rev-parse --short HEAD)\" && echo \"$GIT_REF\" >> \"src/.env\"",
+    "init_env:rinkeby": "cp  \"environments/.env.rinkeby\" \".env\" && GIT_REF=\"APP_GIT_REVISION=$(git rev-parse --short HEAD)\" && echo \"$GIT_REF\" >> \".env\" && cp  \"environments/.env.rinkeby\" \"src/.env\" && GIT_REF=\"APP_GIT_REVISION=$(git rev-parse --short HEAD)\" && echo \"$GIT_REF\" >> \"src/.env\"",
+    "preci": "rm -fr node_modules && rm -rf \"public/**\"",
+    "ci": "yarn install --frozen-lockfile",
     "start:firebase": "firebase serve --only hosting",
     "deploy": "firebase deploy --only hosting",
-    "ci": "yarn install --frozen-lockfile",
     "dev": "nuxt",
     "start": "nuxt start",
     "build": "nuxt build",
