--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "url": "https://github.com/matter-labs/zksync-wallet-vue/issues"
   },
   "dependencies": {
+    "@babel/runtime": "7.x",
     "@nuxtjs/axios": "latest",
     "@nuxtjs/google-gtag": "^1.0.4",
     "@nuxtjs/pwa": "latest",
@@ -50,12 +51,8 @@
     "sass-loader": "latest"
   },
   "scripts": {
-    "build:firebase:mainnet": "yarn preci && yarn ci && yarn init_env:mainnet && yarn generate",
-    "build:firebase:rinkeby": "yarn preci && yarn ci && yarn init_env:rinkeby && yarn generate",
-    "init_env:mainnet": "cp \"environments/.env.mainnet\" \".env\" && GIT_REF=\"APP_GIT_REVISION=$(git rev-parse --short HEAD)\" && echo \"$GIT_REF\" >> \".env\" && cp \"environments/.env.mainnet\" \"src/.env\" && GIT_REF=\"APP_GIT_REVISION=$(git rev-parse --short HEAD)\" && echo \"$GIT_REF\" >> \"src/.env\"",
-    "init_env:rinkeby": "cp  \"environments/.env.rinkeby\" \".env\" && GIT_REF=\"APP_GIT_REVISION=$(git rev-parse --short HEAD)\" && echo \"$GIT_REF\" >> \".env\" && cp  \"environments/.env.rinkeby\" \"src/.env\" && GIT_REF=\"APP_GIT_REVISION=$(git rev-parse --short HEAD)\" && echo \"$GIT_REF\" >> \"src/.env\"",
-    "preci": "rm -fr node_modules && rm -rf \"public/**\"",
-    "ci": "yarn install --frozen-lockfile",
+    "build:firebase:rinkeby": "yarn ci && sh ./cli-process-env.sh \"rinkeby\" && yarn generate --fail-on-error",
+    "ci": "rm -fr node_modules && rm -rf \"public/**\" && yarn install --frozen-lockfile",
     "start:firebase": "firebase serve --only hosting",
     "deploy": "firebase deploy --only hosting",
     "dev": "nuxt",
