fix CI for stage

--- a/.github/workflows/firebase-rinkeby-merge.yml
+++ b/.github/workflows/firebase-rinkeby-merge.yml
@@ -11,14 +11,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: 'yarn deploy:stage'
+      - name: Build stage
+        run: 'yarn build:stage'
         env:
           APP_GIT_REVISION: ${{ github.sha }}
-      - uses: FirebaseExtended/action-hosting-deploy@v0
+      - name: Deploy to Firebase
+        uses: matter-labs/firebase-action@master
         with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}'
-          channelId: rinkeby
-          projectId: zksync-vue
+          args: deploy --project zksync-vue --only hosting
         env:
-          FIREBASE_CLI_PREVIEWS: hostingchannels
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
