--- a/package.json
+++ b/package.json
@@ -55,10 +55,10 @@
     "ci": "rm -fr node_modules && rm -rf \"public/**\" && yarn install --frozen-lockfile",
     "start:firebase": "firebase serve --only hosting",
     "deploy:prod": "./cli-deploy-production.sh",
-    "deploy:stage": "./cli-deploy-stage.sh",
     "dev": "nuxt",
     "start": "nuxt start",
     "build": "nuxt build",
+    "build:stage": "yarn ci && sh cli-process-env.sh 'rinkeby' && yarn generate --fail-on-error",
     "generate": "nuxt generate",
     "test": "echo \"Not implemented.\"",
     "format": "prettier --write",
