feature: updated UI/UX
— resolves ID-ZKF-174 #ZKF-174
— related ID-ZKF-147 #ZKF-147

--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "url": "https://github.com/matter-labs/zksync-wallet-vue/issues"
   },
   "dependencies": {
-    "@babel/runtime": "7.x",
+    "@babel/core": "^7.12.10",
+    "@babel/runtime": "^7.12.5",
+    "@ethersproject/logger": "^5.0.8",
     "@nuxtjs/axios": "latest",
     "@nuxtjs/google-gtag": "^1.0.4",
     "@nuxtjs/pwa": "latest",
     "@nuxtjs/sentry": "^4.5.0",
     "@nuxtjs/toast": "latest",
     "@portis/web3": "^2.0.0-beta.59",
-    "bnc-onboard": "latest",
+    "bnc-onboard-custom": "^1.17.1",
     "ethereum-blockies-base64": "^1.0.2",
     "ethers": "^5.0.12",
     "js-cookie": "^2.2.1",
@@ -31,7 +33,7 @@
     "vue-scrollto": "^2.17.1",
     "walletlink": "^2.0.2",
     "web3": "^1.2.7",
-    "zksync": "^0.7.4"
+    "zksync": "^0.8.3"
   },
   "devDependencies": {
     "@inkline/nuxt": "^2.3.5",
@@ -52,7 +54,7 @@
   },
   "scripts": {
     "build:firebase:rinkeby": "yarn ci && sh ./cli-process-env.sh \"rinkeby\" && yarn generate --fail-on-error",
-    "ci": "rm -fr node_modules && rm -rf \"public/**\" && yarn install --frozen-lockfile",
+    "ci": "rm -fr node_modules && rm -rf 'public/*' && yarn install --frozen-lockfile",
     "start:firebase": "firebase serve --only hosting",
     "deploy:prod": "./cli-deploy-production.sh",
     "dev": "nuxt",
@@ -64,7 +66,7 @@
     "format": "prettier --write",
     "lint-ts": "eslint --fix \"**/*.{js, vue}\"",
     "lint-css": "stylelint --fix \"**/*.scss\"",
-    "audit_dependencies": "npm audit --package-lock-only --audit-level critical --json | npm-audit-html --output audit.html"
+    "audit_dependencies": "yarn audit --package-lock-only --audit-level critical --json | yarn-audit-html --output audit.html"
   },
   "husky": {
     "hooks": {
@@ -76,7 +78,7 @@
     "extends": "react-app"
   },
   "lint-staged": {
-    "*.{css,scss}": "npm run lint-css",
+    "*.{css,scss}": "yarn run lint-css",
     "*.{ts,tsx}": [
       "yarn run lint-ts",
       "yarn run format"
