--- a/.github/workflows/firebase-rinkeby-merge.yml
+++ b/.github/workflows/firebase-rinkeby-merge.yml
@@ -21,3 +21,4 @@ jobs:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}'
           projectId: zksync-vue
+          channelId: live
