updates: prepare for the release
— resolves ID-ZKF-180
— resolves ID-ZKF-184
— resolved ID-ZKF-182
— resolved ID-ZKF-179

Detailed logs added

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,7 @@ public/*
 !public/.gitignore
 .nuxt
 /firebase-debug.log
+/.github/workflows/firebase-hosting-merge.yml
+/.github/workflows/firebase-hosting-pull-request.yml
+/report.txt
+/tokens.txt
