--- a/.gitignore
+++ b/.gitignore
@@ -37,13 +37,10 @@ yarn-error.log*
 .assets_cache/
 .buildx-cache/
 .reports/
-/functions/.nuxt/
 /src/static/sw.js
-public/*
+public
 !public/.gitignore
 .nuxt
 /firebase-debug.log
-/.github/workflows/firebase-hosting-merge.yml
-/.github/workflows/firebase-hosting-pull-request.yml
 /report.txt
 /tokens.txt
