--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxtjs/sentry": "^4.5.0",
     "@nuxtjs/toast": "latest",
     "@portis/web3": "^2.0.0-beta.59",
+    "@walletconnect/web3-provider": "^1.3.1",
     "bnc-onboard-custom": "^1.17.1",
     "ethereum-blockies-base64": "^1.0.2",
     "ethers": "^5.0.12",
@@ -32,7 +33,7 @@
     "vue-recaptcha": "^1.3.0",
     "vue-scrollto": "^2.17.1",
     "walletlink": "^2.0.2",
-    "web3": "^1.2.7",
+    "web3": "^1.3.1",
     "zksync": "^0.8.3"
   },
   "optionalDependencies": {
