--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -6,7 +6,7 @@ name: Deploy to Firebase Hosting on merge
   push:
     branches:
       - dev
-jobs:
+jobs:dist
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
