--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@nuxtjs/toast": "latest",
     "@portis/web3": "^2.0.0-beta.59",
     "@walletconnect/web3-provider": "^1.3.1",
-    "bnc-onboard-custom": "^1.17.1",
+    "@matterlabs/zk-wallet-onboarding": "^1.18.2",
     "ethereum-blockies-base64": "^1.0.2",
     "ethers": "^5.0.12",
     "js-cookie": "^2.2.1",
