--- a/package.json
+++ b/package.json
@@ -58,8 +58,8 @@
     "webpack": "^5.11.1"
   },
   "scripts": {
-    "build_stage": "yarn ci && sh ./cli-process-env.sh \"rinkeby\" && yarn generate --fail-on-error",
     "ci": "rm -fr node_modules && rm -rf 'public/*' && yarn install --frozen-lockfile",
+    "ci:build": "yarn ci && sh ./cli-process-env.sh \"$NETWORK\" && yarn generate --fail-on-error",
     "start:firebase": "firebase serve --only hosting",
     "deploy:prod": "./cli-deploy-production.sh",
     "dev": "nuxt",
